//syntax = "proto3";
//
//option java_multiple_files = true;
//option java_package = "com.pm.userservice.grpc";
//
//package user;
//
//service UserGrpcService {
//  rpc GetUser (UserRequest) returns (UserResponse);
//  rpc CheckUserExists (UserRequest) returns (UserExistsResponse);
//  rpc ValidateCredentials(ValidateCredentialsRequest) returns (ValidateCredentialsResponse);
//}
//
//message ValidateCredentialsRequest {
//  string email = 1;
//  string password = 2;
//}
//
//message ValidateCredentialsResponse {
//  bool success = 1;
//  string message = 2;
//  UserData user = 3;
//}
//
//message UserRequest {
//  string id = 1;
//}
//
//message UserResponse {
//  string id = 1;
//  string username = 2;
//  string email = 3;
//}
//
//message UserExistsResponse {
//  bool exists = 1;
//}
//
//message UserData {
//  string id = 1;
//  string username = 2;
//  string email = 3;
//  string role = 4;
//}

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.pm.grpc.user";

package user;

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
  rpc CheckUserExists (UserRequest) returns (UserExistsResponse);
  rpc ValidateCredentials (ValidateCredentialsRequest) returns (ValidateCredentialsResponse);
  rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
}

message UserRequest {
  string id = 1;
}

message GetUserByIdRequest {
  string userId = 1;
}

message UserResponse {
  bool success = 1;
  string message = 2;
  UserData user = 3;
}

message UserExistsResponse {
  bool exists = 1;
}

message ValidateCredentialsRequest {
  string email = 1;
  string password = 2;
}

message ValidateCredentialsResponse {
  bool success = 1;
  string message = 2;
  UserData user = 3;
}

message UserData {
  string id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
}